# projects-C-kata01

./: README.md
trailingZeros/: CMakeLists.txt
trailingZeros/include/: main.h  other.h
trailingZeros/src/: main.c  other.c
trailingZeros/tests/: CMakeLists.txt  check_main.c
